--- a/client/package.json
+++ b/client/package.json
@@ -20,11 +20,14 @@
     "web-vitals": "^1.0.1",
     "yup": "^0.32.9"
   },
+  "devDependencies": {
+    "@craco/craco": "^6.1.1"
+  },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "craco start",
+    "build": "craco build",
+    "test": "craco test",
+    "eject": "craco eject"
   },
   "eslintConfig": {
     "extends": [
